--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : cole-jaramillo-900b7a3a9
+  linkedin         : "cole-jaramillo-900b7a3a9"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
