--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,14 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Home"
+    url: /
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Resume"
+    url: /files/resume.pdf
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  # - title: "CV"
-  #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "LinkedIn"
+    url: https://www.linkedin.com/in/cole-jaramillo-900b7a3a9/
+
+  - title: "UH CS Department"
+    url: https://cs.uh.edu
